Added a bunch of metrics

--- a/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
+++ b/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
@@ -182,11 +182,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 173,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1550058093.py, line 37)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [173]\u001b[0;36m\u001b[0m\n\u001b[0;31m    'specificity':\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "import tqdm\n",
+    "\n",
     "def evaluate_model(test_dl, model, beta=1.0):\n",
     "    preds = []\n",
     "    actuals = []\n",
@@ -212,12 +221,19 @@
     "    cm = confusion_matrix(actuals, preds)\n",
     "    # Get descriptions of tp, tn, fp, fn\n",
     "    tn, fp, fn, tp = cm.ravel()\n",
+    "    total = sum(cm.ravel())\n",
     "    \n",
     "    metrics = {\n",
     "        'accuracy': accuracy_score(actuals, preds),\n",
     "        'AU_ROC': roc_auc_score(actuals, preds),\n",
     "        'precision': precision_score(actuals, preds),\n",
+    "        'prevalence' : tn / (tn + fn),\n",
     "        'recall': recall_score(actuals, preds),\n",
+    "        'true_positive_rate_TPR':recall_score(actuals, preds),\n",
+    "        'false_positive_rate_FPR':fp / (fp + tn) ,\n",
+    "        'misclassification_error_rate': (fp+fn)/total ,\n",
+    "        'sensitivity': tp / (tp + fn),\n",
+    "        'specificity': tn / (tn + fp),\n",
     "        'f1_score': f1_score(actuals, preds),\n",
     "        'average_precision_score': average_precision_score(actuals, preds),\n",
     "        'f_beta': ((1+beta**2) * precision_score(actuals, preds) * recall_score(actuals, preds)) / (beta**2 * precision_score(actuals, preds) + recall_score(actuals, preds)),\n",
@@ -233,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +288,7 @@
      "output_type": "stream",
      "text": [
       "316 35\n",
-      "<torch.utils.data.dataset.Subset object at 0x7f25b0bb4eb0>\n"
+      "<torch.utils.data.dataset.Subset object at 0x7f25b0a652e0>\n"
      ]
     }
    ],
@@ -283,18 +299,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9 2 0 24\n",
-      "0.9230769230769231\n",
-      "0.9230769230769231\n",
-      "1.0\n",
-      "1.0\n"
+      "35\n",
+      "{'accuracy': 0.9714285714285714, 'AU_ROC': 0.9615384615384616, 'precision': 0.9565217391304348, 'recall': 1.0, 'true_positive_rate_TPR': 1.0, 'false_positive_rate_FPR': 0.07692307692307693, 'misclassification_rate': 0.02857142857142857, 'f1_score': 0.9777777777777777, 'average_precision_score': 0.9565217391304348, 'f_beta': 0.9982547993019196, 'confusion_matrix': array([[12,  1],\n",
+      "       [ 0, 22]]), 'TP': 22, 'FP': 1, 'FN': 0, 'TN': 12}\n"
      ]
     }
    ],
@@ -304,19 +318,10 @@
     "# Train the model\n",
     "train_model(train_dl, model)\n",
     "# Evaluate the model\n",
-    "results = evaluate_model(test_dl, model)[0]\n",
-    "cm = results['confusion_matrix']\n",
+    "results = evaluate_model(test_dl, model, beta=5)[0]\n",
+    "print(results)\n",
     "\n",
-    "tn, fp, fn, tp = cm.ravel()\n",
-    "print(tn, fp, fn, tp)\n",
-    "\n",
-    "precision_manual = tp / (tp + fp)\n",
-    "recall_manual = tp / (tp + fn)\n",
-    "print(precision_manual)\n",
-    "print(results['precision'])\n",
-    "\n",
-    "print(recall_manual)\n",
-    "print(results['recall'])\n"
+    "\n"
    ]
   }
  ],
