Added training loop message

--- a/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
+++ b/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "from torch.optim import SGD\n",
     "from torch.nn import BCELoss\n",
     "from torch.nn.init import kaiming_uniform_\n",
-    "from torch.nn.init import xavier_uniform_"
+    "from torch.nn.init import xavier_uniform_\n",
+    "import time"
    ]
   },
   {
@@ -160,12 +161,16 @@
    "outputs": [],
    "source": [
     "# Create training loop based off our custom class\n",
-    "def train_model(train_dl, model):\n",
+    "def train_model(train_dl, model, epochs=100):\n",
     "    # Define your optimisation function for reducing loss when weights are calculated \n",
     "    # and propogated through the network\n",
+    "\n",
+    "    start = time.time()\n",
     "    criterion = BCELoss()\n",
     "    optimizer = SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
-    "    for epoch in range(100):\n",
+    "    for epoch in range(epochs):\n",
+    "        print(f'Epoch number {epoch}/{epochs-1}')\n",
+    "        print('='* 60)\n",
     "        # Create batches\n",
     "        for i, (inputs, targets) in enumerate(train_dl):\n",
     "            #Important to clear the gradients\n",
@@ -177,25 +182,17 @@
     "            # Update model weights through back propogation\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
-    "\n"
+    "    time_delta = time.time() - start\n",
+    "    print(f'Training finished in {time_delta // 60}mins {time_delta %60}secs')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 194,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1550058093.py, line 37)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [173]\u001b[0;36m\u001b[0m\n\u001b[0;31m    'specificity':\u001b[0m\n\u001b[0m                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
+    "import math\n",
     "def evaluate_model(test_dl, model, beta=1.0):\n",
     "    preds = []\n",
     "    actuals = []\n",
@@ -226,18 +223,21 @@
     "    metrics = {\n",
     "        'accuracy': accuracy_score(actuals, preds),\n",
     "        'AU_ROC': roc_auc_score(actuals, preds),\n",
-    "        'precision': precision_score(actuals, preds),\n",
-    "        'prevalence' : tn / (tn + fn),\n",
-    "        'recall': recall_score(actuals, preds),\n",
-    "        'true_positive_rate_TPR':recall_score(actuals, preds),\n",
-    "        'false_positive_rate_FPR':fp / (fp + tn) ,\n",
-    "        'misclassification_error_rate': (fp+fn)/total ,\n",
-    "        'sensitivity': tp / (tp + fn),\n",
-    "        'specificity': tn / (tn + fp),\n",
     "        'f1_score': f1_score(actuals, preds),\n",
     "        'average_precision_score': average_precision_score(actuals, preds),\n",
     "        'f_beta': ((1+beta**2) * precision_score(actuals, preds) * recall_score(actuals, preds)) / (beta**2 * precision_score(actuals, preds) + recall_score(actuals, preds)),\n",
-    "        'confusion_matrix': confusion_matrix(actuals, preds), \n",
+    "        'matthews_correlation_coefficient': (tp*tn - fp*fn) / math.sqrt((tp+fp)*(tp+fn)*(tn+fp)*(tn+fn)),\n",
+    "        'precision': precision_score(actuals, preds),\n",
+    "        'recall': recall_score(actuals, preds),\n",
+    "        'true_positive_rate_TPR':recall_score(actuals, preds),\n",
+    "        'false_positive_rate_FPR':fp / (fp + tn) ,\n",
+    "        'false_discovery_rate': fp / (fp +tp),\n",
+    "        'false_negative_rate': fn / (fn + tp) ,\n",
+    "        'negative_predictive_value': tn / (tn+fn),\n",
+    "        'misclassification_error_rate': (fp+fn)/total ,\n",
+    "        'sensitivity': tp / (tp + fn),\n",
+    "        'specificity': tn / (tn + fp),\n",
+    "        #'confusion_matrix': confusion_matrix(actuals, preds), \n",
     "        'TP': tp,\n",
     "        'FP': fp, \n",
     "        'FN': fn, \n",
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
      "output_type": "stream",
      "text": [
       "316 35\n",
-      "<torch.utils.data.dataset.Subset object at 0x7f25b0a652e0>\n"
+      "<torch.utils.data.dataset.Subset object at 0x7f25b10af9a0>\n"
      ]
     }
    ],
@@ -299,16 +299,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35\n",
-      "{'accuracy': 0.9714285714285714, 'AU_ROC': 0.9615384615384616, 'precision': 0.9565217391304348, 'recall': 1.0, 'true_positive_rate_TPR': 1.0, 'false_positive_rate_FPR': 0.07692307692307693, 'misclassification_rate': 0.02857142857142857, 'f1_score': 0.9777777777777777, 'average_precision_score': 0.9565217391304348, 'f_beta': 0.9982547993019196, 'confusion_matrix': array([[12,  1],\n",
-      "       [ 0, 22]]), 'TP': 22, 'FP': 1, 'FN': 0, 'TN': 12}\n"
+      "{'accuracy': 0.8857142857142857, 'AU_ROC': 0.8461538461538461, 'f1_score': 0.9166666666666666, 'average_precision_score': 0.8461538461538461, 'f_beta': 0.9930555555555556, 'matthews_correlation_coefficient': 0.7653749516204769, 'precision': 0.8461538461538461, 'recall': 1.0, 'true_positive_rate_TPR': 1.0, 'false_positive_rate_FPR': 0.3076923076923077, 'false_discovery_rate': 0.15384615384615385, 'false_negative_rate': 0.0, 'negative_predictive_value': 1.0, 'misclassification_error_rate': 0.11428571428571428, 'sensitivity': 1.0, 'specificity': 0.6923076923076923, 'TP': 22, 'FP': 4, 'FN': 0, 'TN': 9}\n"
      ]
     }
    ],
@@ -318,9 +316,11 @@
     "# Train the model\n",
     "train_model(train_dl, model)\n",
     "# Evaluate the model\n",
-    "results = evaluate_model(test_dl, model, beta=5)[0]\n",
-    "print(results)\n",
-    "\n",
+    "results = evaluate_model(test_dl, model, beta=5)\n",
+    "model_metrics = results[0]\n",
+    "preds = results[1]\n",
+    "actuals_gt_labesl = results[2]\n",
+    "print(model_metrics)\n",
     "\n"
    ]
   }
