--- a/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
+++ b/01_MLP_Thyroid_Classifier/thyroid_PyTorch_mlp_new.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 457,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from torch.utils.data import Dataset\n",
     "from torch.utils.data import DataLoader\n",
     "from torch.utils.data import random_split\n",
+    "import torch\n",
     "from torch import Tensor\n",
     "from torch.nn import Linear\n",
     "from torch.nn import ReLU\n",
@@ -22,14 +23,18 @@
     "from torch.nn import Module\n",
     "from torch.optim import SGD\n",
     "from torch.nn import BCELoss\n",
+    "from torch.optim import lr_scheduler\n",
     "from torch.nn.init import kaiming_uniform_\n",
     "from torch.nn.init import xavier_uniform_\n",
-    "import time"
+    "import time\n",
+    "import copy\n",
+    "\n",
+    "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 458,
    "metadata": {},
    "outputs": [
     {
@@ -64,12 +69,13 @@
     "thyroid = pd.concat([X,Y], axis=1)\n",
     "thyroid = thyroid.dropna()\n",
     "thyroid.to_csv('thyroid_raw.csv', header=None, index=None)\n",
-    "\n"
+    "\n",
+    "DATASET_SIZE = len(thyroid)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 459,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 460,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 461,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,47 +154,62 @@
     "    dataset = ThryoidCSVDataset(path)\n",
     "    train, test = dataset.split_data(split_ratio=0.1)\n",
     "    # Prepare data loaders\n",
+    "    train_len = len(train)\n",
     "    train_dl = DataLoader(train, batch_size=32, shuffle=True)\n",
     "    test_dl = DataLoader(test, batch_size=1024, shuffle=False)\n",
-    "    return train_dl, test_dl\n",
+    "    return train_dl, test_dl, train_len\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 541,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create training loop based off our custom class\n",
-    "def train_model(train_dl, model, epochs=100):\n",
+    "def train_model(train_dl, model, epochs=100, lr=0.01, momentum=0.9, save_path='thyroid_best_model.pth'):\n",
     "    # Define your optimisation function for reducing loss when weights are calculated \n",
     "    # and propogated through the network\n",
-    "\n",
     "    start = time.time()\n",
+    "    total = 0\n",
     "    criterion = BCELoss()\n",
-    "    optimizer = SGD(model.parameters(), lr=0.01, momentum=0.9)\n",
+    "    optimizer = SGD(model.parameters(), lr=lr, momentum=momentum)\n",
+    "    loss = 0.0\n",
+    "    best_acc = 0.0\n",
+    "\n",
     "    for epoch in range(epochs):\n",
-    "        print(f'Epoch number {epoch}/{epochs-1}')\n",
-    "        print('='* 60)\n",
-    "        # Create batches\n",
+    "        correct = 0\n",
+    "        print('Epoch {}/{}'.format(epoch+1, epochs))\n",
+    "        print('-' * 10)\n",
+    "        model.train()\n",
+    "        # Iterate through training data loader\n",
     "        for i, (inputs, targets) in enumerate(train_dl):\n",
-    "            #Important to clear the gradients\n",
     "            optimizer.zero_grad()\n",
-    "            # Compute the model output\n",
-    "            yhat = model(inputs)\n",
-    "            # Calculate the loss method\n",
-    "            loss = criterion(yhat, targets)\n",
-    "            # Update model weights through back propogation\n",
+    "            outputs = model(inputs)\n",
+    "            _, preds = torch.max(outputs.data,1) #Get the class labels\n",
+    "            loss = criterion(outputs, targets)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
+    "            total += targets.size(0)\n",
+    "            correct += (preds == targets).sum().item()\n",
+    "            torch.save(model, save_path)\n",
+    "        acc = correct / total\n",
+    "        print(f'Current accuracy is: {acc}')\n",
     "    time_delta = time.time() - start\n",
-    "    print(f'Training finished in {time_delta // 60}mins {time_delta %60}secs')\n"
+    "    print('Training complete in {:.0f}m {:.0f}s'.format(\n",
+    "        time_delta // 60, time_delta % 60\n",
+    "    ))\n",
+    "    \n",
+    "    return model\n",
+    "\n",
+    "        \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 542,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 543,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,16 +292,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 537,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dl, test_dl = prepare_thyroid_dataset('https://raw.githubusercontent.com/jbrownlee/Datasets/master/ionosphere.csv')"
+    "train_dl, test_dl, train_len = prepare_thyroid_dataset('https://raw.githubusercontent.com/jbrownlee/Datasets/master/ionosphere.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 538,
    "metadata": {},
    "outputs": [
     {
@@ -288,25 +309,238 @@
      "output_type": "stream",
      "text": [
       "316 35\n",
-      "<torch.utils.data.dataset.Subset object at 0x7f25b10af9a0>\n"
+      "<torch.utils.data.dataset.Subset object at 0x7f259c176820>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "316"
+      ]
+     },
+     "execution_count": 538,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "print(len(train_dl.dataset), len(test_dl.dataset))\n",
-    "print(train_dl.dataset)"
+    "print(train_dl.dataset)\n",
+    "train_len"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 544,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'accuracy': 0.8857142857142857, 'AU_ROC': 0.8461538461538461, 'f1_score': 0.9166666666666666, 'average_precision_score': 0.8461538461538461, 'f_beta': 0.9930555555555556, 'matthews_correlation_coefficient': 0.7653749516204769, 'precision': 0.8461538461538461, 'recall': 1.0, 'true_positive_rate_TPR': 1.0, 'false_positive_rate_FPR': 0.3076923076923077, 'false_discovery_rate': 0.15384615384615385, 'false_negative_rate': 0.0, 'negative_predictive_value': 1.0, 'misclassification_error_rate': 0.11428571428571428, 'sensitivity': 1.0, 'specificity': 0.6923076923076923, 'TP': 22, 'FP': 4, 'FN': 0, 'TN': 9}\n"
+      "Epoch 1/100\n",
+      "----------\n",
+      "Epoch 2/100\n",
+      "----------\n",
+      "Epoch 3/100\n",
+      "----------\n",
+      "Epoch 4/100\n",
+      "----------\n",
+      "Epoch 5/100\n",
+      "----------\n",
+      "Epoch 6/100\n",
+      "----------\n",
+      "Epoch 7/100\n",
+      "----------\n",
+      "Epoch 8/100\n",
+      "----------\n",
+      "Epoch 9/100\n",
+      "----------\n",
+      "Epoch 10/100\n",
+      "----------\n",
+      "Epoch 11/100\n",
+      "----------\n",
+      "Epoch 12/100\n",
+      "----------\n",
+      "Epoch 13/100\n",
+      "----------\n",
+      "Epoch 14/100\n",
+      "----------\n",
+      "Epoch 15/100\n",
+      "----------\n",
+      "Epoch 16/100\n",
+      "----------\n",
+      "Epoch 17/100\n",
+      "----------\n",
+      "Epoch 18/100\n",
+      "----------\n",
+      "Epoch 19/100\n",
+      "----------\n",
+      "Epoch 20/100\n",
+      "----------\n",
+      "Epoch 21/100\n",
+      "----------\n",
+      "Epoch 22/100\n",
+      "----------\n",
+      "Epoch 23/100\n",
+      "----------\n",
+      "Epoch 24/100\n",
+      "----------\n",
+      "Epoch 25/100\n",
+      "----------\n",
+      "Epoch 26/100\n",
+      "----------\n",
+      "Epoch 27/100\n",
+      "----------\n",
+      "Epoch 28/100\n",
+      "----------\n",
+      "Epoch 29/100\n",
+      "----------\n",
+      "Epoch 30/100\n",
+      "----------\n",
+      "Epoch 31/100\n",
+      "----------\n",
+      "Epoch 32/100\n",
+      "----------\n",
+      "Epoch 33/100\n",
+      "----------\n",
+      "Epoch 34/100\n",
+      "----------\n",
+      "Epoch 35/100\n",
+      "----------\n",
+      "Epoch 36/100\n",
+      "----------\n",
+      "Epoch 37/100\n",
+      "----------\n",
+      "Epoch 38/100\n",
+      "----------\n",
+      "Epoch 39/100\n",
+      "----------\n",
+      "Epoch 40/100\n",
+      "----------\n",
+      "Epoch 41/100\n",
+      "----------\n",
+      "Epoch 42/100\n",
+      "----------\n",
+      "Epoch 43/100\n",
+      "----------\n",
+      "Epoch 44/100\n",
+      "----------\n",
+      "Epoch 45/100\n",
+      "----------\n",
+      "Epoch 46/100\n",
+      "----------\n",
+      "Epoch 47/100\n",
+      "----------\n",
+      "Epoch 48/100\n",
+      "----------\n",
+      "Epoch 49/100\n",
+      "----------\n",
+      "Epoch 50/100\n",
+      "----------\n",
+      "Epoch 51/100\n",
+      "----------\n",
+      "Epoch 52/100\n",
+      "----------\n",
+      "Epoch 53/100\n",
+      "----------\n",
+      "Epoch 54/100\n",
+      "----------\n",
+      "Epoch 55/100\n",
+      "----------\n",
+      "Epoch 56/100\n",
+      "----------\n",
+      "Epoch 57/100\n",
+      "----------\n",
+      "Epoch 58/100\n",
+      "----------\n",
+      "Epoch 59/100\n",
+      "----------\n",
+      "Epoch 60/100\n",
+      "----------\n",
+      "Epoch 61/100\n",
+      "----------\n",
+      "Epoch 62/100\n",
+      "----------\n",
+      "Epoch 63/100\n",
+      "----------\n",
+      "Epoch 64/100\n",
+      "----------\n",
+      "Epoch 65/100\n",
+      "----------\n",
+      "Epoch 66/100\n",
+      "----------\n",
+      "Epoch 67/100\n",
+      "----------\n",
+      "Epoch 68/100\n",
+      "----------\n",
+      "Epoch 69/100\n",
+      "----------\n",
+      "Epoch 70/100\n",
+      "----------\n",
+      "Epoch 71/100\n",
+      "----------\n",
+      "Epoch 72/100\n",
+      "----------\n",
+      "Epoch 73/100\n",
+      "----------\n",
+      "Epoch 74/100\n",
+      "----------\n",
+      "Epoch 75/100\n",
+      "----------\n",
+      "Epoch 76/100\n",
+      "----------\n",
+      "Epoch 77/100\n",
+      "----------\n",
+      "Epoch 78/100\n",
+      "----------\n",
+      "Epoch 79/100\n",
+      "----------\n",
+      "Epoch 80/100\n",
+      "----------\n",
+      "Epoch 81/100\n",
+      "----------\n",
+      "Epoch 82/100\n",
+      "----------\n",
+      "Epoch 83/100\n",
+      "----------\n",
+      "Epoch 84/100\n",
+      "----------\n",
+      "Epoch 85/100\n",
+      "----------\n",
+      "Epoch 86/100\n",
+      "----------\n",
+      "Epoch 87/100\n",
+      "----------\n",
+      "Epoch 88/100\n",
+      "----------\n",
+      "Epoch 89/100\n",
+      "----------\n",
+      "Epoch 90/100\n",
+      "----------\n",
+      "Epoch 91/100\n",
+      "----------\n",
+      "Epoch 92/100\n",
+      "----------\n",
+      "Epoch 93/100\n",
+      "----------\n",
+      "Epoch 94/100\n",
+      "----------\n",
+      "Epoch 95/100\n",
+      "----------\n",
+      "Epoch 96/100\n",
+      "----------\n",
+      "Epoch 97/100\n",
+      "----------\n",
+      "Epoch 98/100\n",
+      "----------\n",
+      "Epoch 99/100\n",
+      "----------\n",
+      "Epoch 100/100\n",
+      "----------\n",
+      "Current accuracy is: 11.50632911392405\n",
+      "Training complete in 0m 3s\n",
+      "{'accuracy': 0.9142857142857143, 'AU_ROC': 0.8882575757575758, 'f1_score': 0.9387755102040817, 'average_precision_score': 0.9102380952380953, 'f_beta': 0.9568000000000001, 'matthews_correlation_coefficient': 0.797961417765561, 'precision': 0.92, 'recall': 0.9583333333333334, 'true_positive_rate_TPR': 0.9583333333333334, 'false_positive_rate_FPR': 0.18181818181818182, 'false_discovery_rate': 0.08, 'false_negative_rate': 0.041666666666666664, 'negative_predictive_value': 0.9, 'misclassification_error_rate': 0.08571428571428572, 'sensitivity': 0.9583333333333334, 'specificity': 0.8181818181818182, 'TP': 23, 'FP': 2, 'FN': 1, 'TN': 9}\n"
      ]
     }
    ],
@@ -314,7 +548,7 @@
     "# Specify the number of input dimensions\n",
     "model = ThyroidMLP(34)\n",
     "# Train the model\n",
-    "train_model(train_dl, model)\n",
+    "train_model(train_dl, model, save_path='data/thyroid_model.pth')\n",
     "# Evaluate the model\n",
     "results = evaluate_model(test_dl, model, beta=5)\n",
     "model_metrics = results[0]\n",
@@ -323,6 +557,13 @@
     "print(model_metrics)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
